Solutions/Lab03/wordpress-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: wordpress
  name: wordpress-new
spec:
  host: ''
  port:
    targetPort: 80
  to:
    kind: Service
    name: wordpress
    weight: 100
  wildcardPolicy: None
